syntax = "proto3";

package networkdemo;
option go_package = "networkdemo";

service NetworkDemo {
  rpc Single(SingleRequest) returns (SingleResponse) {}

  rpc StreamData(StreamDataRequest) returns (stream StreamDataResponse) {
  }
}

message SingleRequest {}
message SingleResponse {}
message StreamDataRequest {}
message StreamDataResponse {}
